[gd_scene format=3 uid="uid://c2bnou8kg4crr"]

[ext_resource type="Script" uid="uid://b7nkd36hb1xm1" path="res://source/props/spikes/spikes.gd" id="1_e8dxw"]
[ext_resource type="Texture2D" uid="uid://8sekb5d17i6r" path="res://assets/props/spikes/spikes3.png" id="2_3b0lk"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_3b0lk"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_nnjg2"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_0tsnw"]

[node name="Spikes" type="Node2D" unique_id=1294788690]
script = ExtResource("1_e8dxw")

[node name="Sprite" type="Sprite2D" parent="." unique_id=1140869030]
z_index = 1
texture = ExtResource("2_3b0lk")
centered = false

[node name="Collision" type="Area2D" parent="Sprite" unique_id=737456047]
collision_layer = 2

[node name="Spike1" type="CollisionShape2D" parent="Sprite/Collision" unique_id=759159651]
shape = SubResource("ConvexPolygonShape2D_3b0lk")
disabled = true

[node name="Spike2" type="CollisionShape2D" parent="Sprite/Collision" unique_id=124102731]
shape = SubResource("ConvexPolygonShape2D_nnjg2")
disabled = true

[node name="Spike3" type="CollisionShape2D" parent="Sprite/Collision" unique_id=1342703761]
shape = SubResource("ConvexPolygonShape2D_0tsnw")
disabled = true

[node name="SpikePoly1" type="Polygon2D" parent="." unique_id=1561903950]
visible = false
polygon = PackedVector2Array(0, 22, 11, 0, 12, 0, 23, 22, 23, 24, 0, 24)

[node name="SpikePoly2" type="Polygon2D" parent="." unique_id=1222181981]
visible = false
polygon = PackedVector2Array(24, 24, 24, 22, 35, 0, 36, 0, 47, 22, 47, 24)

[node name="SpikePoly3" type="Polygon2D" parent="." unique_id=2052009357]
visible = false
polygon = PackedVector2Array(48, 24, 48, 22, 59, 0, 60, 0, 71, 22, 71, 24)
